feat: 完善平台图谱与插件运行能力